--- a/WASMSerialTerminal/wwwroot/index.html
+++ b/WASMSerialTerminal/wwwroot/index.html
@@ -12,6 +12,9 @@
 	<link href="manifest.json" rel="manifest" />
 	<link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 	<link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+	
+	<!-- Needed to display favicon in github pages -->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 	<link rel="stylesheet" href="_content/Radzen.Blazor/css/software-base.css">
 	<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
